--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/style/global.css" />
+    <link rel="stylesheet" href="/global.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -515,13 +515,13 @@
         </div>
       </div>
       <div class="mt-[75px]">
-        <img src="/assets/img/Group 36043.png" alt="" />
+        <img src="/Group 36043.png" alt="" />
       </div>
     </div>
     <!-- our service  -->
     <div class="bg-[#35262D] relative mt-[70px]">
       <span class="absolute bottom-10 right-0">
-        <img src="/assets/img/Group 16.png" alt="" />
+        <img src="/Group 16.png" alt="" />
       </span>
       <div class="max-w-[1340px] w-full mx-auto px-[60px] relative pb-[80px]">
         <h1
@@ -805,7 +805,7 @@
       <div
         class="max-w-[1140px] w-full mx-auto mt-[200px] gap-[32px] flex lg:flex-row flex-col items-center relative"
       >
-        <div><img src="/assets/img/Group 36041.png" alt="" /></div>
+        <div><img src="/Group 36041.png" alt="" /></div>
         <div class="mt-[36px] w-full">
           <h2
             class="text-white text-[24px] openfont font-semibold leading-[26px]"
@@ -901,7 +901,7 @@
           </p>
         </div>
         <div class="flex flex-col items-center">
-          <img src="/assets/img/Group 36042.png" alt="" />
+          <img src="/Group 36042.png" alt="" />
           <div class="max-w-[271px] w-full">
             <h2 class="textrgb jost text-[60px] font-semibold leading-[95px]">
               02
@@ -959,18 +959,18 @@
         </button>
       </div>
       <div>
-        <img src="/assets/img/image 8.png" alt="" />
+        <img src="/image 8.png" alt="" />
       </div>
     </div>
     <!-- get in  -->
     <div
-      class="bg-[url('/assets/img/bg.png')] bg-cover bg-no-repeat max-w-[1440px] bg-center w-full mx-auto mt-[200px]"
+      class="bg-[url('/bg.png')] bg-cover bg-no-repeat max-w-[1440px] bg-center w-full mx-auto mt-[200px]"
     >
       <div
         class="flex lg:flex-row flex-col max-w-[1440px] w-full mx-auto items-center justify-between"
       >
         <div>
-          <img src="/assets/img/Group 20.png" alt="" />
+          <img src="/Group 20.png" alt="" />
         </div>
         <div class="max-w-[526px] w-full">
           <h1
@@ -1080,7 +1080,7 @@
               <div
                 class="max-w-[326px] w-full z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] p-[24px]"
               >
-                <img src="/assets/img/Rectangle 12.png" alt="" />
+                <img src="/Rectangle 12.png" alt="" />
                 <h2
                   class="text-white openfont text-[24px] font-bold mt-[24px] leading-[26px]"
                 >
@@ -1106,7 +1106,7 @@
               <div
                 class="max-w-[326px] w-full z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] p-[24px]"
               >
-                <img src="/assets/img/Rectangle 12.png" alt="" />
+                <img src="/Rectangle 12.png" alt="" />
                 <h2
                   class="text-white openfont text-[24px] font-bold mt-[24px] leading-[26px]"
                 >
@@ -1132,7 +1132,7 @@
               <div
                 class="max-w-[326px] w-full z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] p-[24px]"
               >
-                <img src="/assets/img/Rectangle 12.png" alt="" />
+                <img src="/Rectangle 12.png" alt="" />
                 <h2
                   class="text-white openfont text-[24px] font-bold mt-[24px] leading-[26px]"
                 >
@@ -1158,7 +1158,7 @@
               <div
                 class="max-w-[326px] w-full z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] p-[24px]"
               >
-                <img src="/assets/img/Rectangle 12.png" alt="" />
+                <img src="/Rectangle 12.png" alt="" />
                 <h2
                   class="text-white openfont text-[24px] font-bold mt-[24px] leading-[26px]"
                 >
@@ -1184,7 +1184,7 @@
               <div
                 class="max-w-[326px] w-full z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] p-[24px]"
               >
-                <img src="/assets/img/Rectangle 12.png" alt="" />
+                <img src="/Rectangle 12.png" alt="" />
                 <h2
                   class="text-white openfont text-[24px] font-bold mt-[24px] leading-[26px]"
                 >
@@ -1210,7 +1210,7 @@
               <div
                 class="max-w-[326px] w-full z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] p-[24px]"
               >
-                <img src="/assets/img/Rectangle 12.png" alt="" />
+                <img src="/Rectangle 12.png" alt="" />
                 <h2
                   class="text-white openfont text-[24px] font-bold mt-[24px] leading-[26px]"
                 >
@@ -1238,11 +1238,11 @@
     <!-- footer  -->
     <!-- 
     <div
-      class="bg-[url('/assets/img/footer.png')] bg-cover bg-no-repeat h-[600px] max-w-[1920px] w-full mx-auto mt-[100px]"
+      class="bg-[url('/footer.png')] bg-cover bg-no-repeat h-[600px] max-w-[1920px] w-full mx-auto mt-[100px]"
     ></div> -->
 
     <!-- Initialize Swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
