--- a/index.html
+++ b/index.html
@@ -672,13 +672,13 @@
         </div>
       </div>
       <div class="mt-[75px]">
-        <img src="/Group 36043.png" alt="" />
+        <img src="Group 36043.png" alt="" />
       </div>
     </div>
     <!-- our service  -->
     <div class="bg-[#35262D] relative mt-[70px]">
       <span class="absolute bottom-10 right-0">
-        <img src="/Group 16.png" alt="" />
+        <img src="Group 16.png" alt="" />
       </span>
       <div class="max-w-[1340px] w-full mx-auto px-[60px] relative pb-[80px]">
         <h1
