--- a/index.html
+++ b/index.html
@@ -672,13 +672,13 @@
         </div>
       </div>
       <div class="mt-[75px]">
-        <img src="Group 36043.png" alt="" />
+        <img src="./Group 36043.png" alt="" />
       </div>
     </div>
     <!-- our service  -->
     <div class="bg-[#35262D] relative mt-[70px]">
       <span class="absolute bottom-10 right-0">
-        <img src="Group 16.png" alt="" />
+        <img src="./Group 16.png" alt="" />
       </span>
       <div class="max-w-[1340px] w-full mx-auto px-[60px] relative pb-[80px]">
         <h1
@@ -962,7 +962,7 @@
       <div
         class="max-w-[1140px] w-full mx-auto mt-[200px] gap-[32px] flex lg:flex-row flex-col items-center relative"
       >
-        <div><img src="/Group 36041.png" alt="" /></div>
+        <div><img src="./Group 36041.png" alt="" /></div>
         <div class="mt-[36px] w-full">
           <h2
             class="text-white text-[24px] openfont font-semibold leading-[26px]"
@@ -1058,7 +1058,7 @@
           </p>
         </div>
         <div class="flex flex-col items-center">
-          <img src="/Group 36042.png" alt="" />
+          <img src="./Group 36042.png" alt="" />
           <div class="max-w-[271px] w-full">
             <h2 class="textrgb jost text-[60px] font-semibold leading-[95px]">
               02
@@ -1116,7 +1116,7 @@
         </button>
       </div>
       <div>
-        <img src="/image 8.png" alt="" />
+        <img src="./image 8.png" alt="" />
       </div>
     </div>
     <!-- get in  -->
@@ -1127,7 +1127,7 @@
         class="flex lg:flex-row flex-col max-w-[1440px] w-full mx-auto items-center justify-between"
       >
         <div>
-          <img src="/Group 20.png" alt="" />
+          <img src="./Group 20.png" alt="" />
         </div>
         <div class="max-w-[526px] w-full">
           <h1
