--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
     </div>
     <!-- get in  -->
     <div
-      class="bg-[url('/bg.png')] bg-cover bg-no-repeat max-w-[1440px] bg-center w-full mx-auto mt-[200px]"
+      class="bg-[url('./bg.png')] bg-cover bg-no-repeat max-w-[1440px] bg-center w-full mx-auto mt-[200px]"
     >
       <div
         class="flex lg:flex-row flex-col max-w-[1440px] w-full mx-auto items-center justify-between"
@@ -1237,7 +1237,7 @@
               <div
                 class="max-w-[326px] w-full z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] p-[24px]"
               >
-                <img src="/Rectangle 12.png" alt="" />
+                <img src="./Rectangle 12.png" alt="" />
                 <h2
                   class="text-white openfont text-[24px] font-bold mt-[24px] leading-[26px]"
                 >
@@ -1263,7 +1263,7 @@
               <div
                 class="max-w-[326px] w-full z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] p-[24px]"
               >
-                <img src="/Rectangle 12.png" alt="" />
+                <img src="./Rectangle 12.png" alt="" />
                 <h2
                   class="text-white openfont text-[24px] font-bold mt-[24px] leading-[26px]"
                 >
@@ -1289,7 +1289,7 @@
               <div
                 class="max-w-[326px] w-full z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] p-[24px]"
               >
-                <img src="/Rectangle 12.png" alt="" />
+                <img src="./Rectangle 12.png" alt="" />
                 <h2
                   class="text-white openfont text-[24px] font-bold mt-[24px] leading-[26px]"
                 >
