--- a/index.html
+++ b/index.html
@@ -517,16 +517,17 @@
         </div>
       </div>
       <div class="mt-[75px]">
-        <img src="./Group 36043.png" alt="" />
+        <img id="mainimg" src="./Group 36043.png" alt="" />
       </div>
     </div>
     <!-- our service  -->
-    <div class="bg-[#35262D] relative mt-[70px]">
+    <div class="bg-[#35262D] relative mt-[70px]" id="ourmain">
       <span class="absolute bottom-10 right-0">
         <img src="./Group 16.png" alt="" />
       </span>
       <div class="max-w-[1340px] w-full mx-auto px-[60px] relative pb-[80px]">
         <h1
+          id="our"
           class="text-center text-white text-[28px] sm:text-[64px] openfont font-extrabold py-[50px]"
         >
           Our Services
@@ -772,7 +773,7 @@
       </div>
     </div>
     <!-- our team  -->
-    <div class="w-full relative">
+    <div class="w-full relative" id="team-main">
       <span class="absolute bottom-0 right-0">
         <svg
           width="134"
@@ -815,6 +816,7 @@
             Benefits / Results
           </h2>
           <h1
+            id="team"
             class="text-white text-[28px] sm:text-[64px] openfont font-extrabold leading-[70px] my-[6px]"
           >
             Our Team Expert
@@ -844,7 +846,7 @@
       </div>
     </div>
     <!-- our work  -->
-    <div class="max-w-[1145px] w-full mx-auto mt-[265px]">
+    <div class="max-w-[1145px] w-full mx-auto mt-[265px]" id="work-main">
       <div class="max-w-[581px] w-full mx-auto text-center">
         <h2
           class="text-white openfont text-[24px] font-semibold leading-[26px]"
@@ -903,7 +905,7 @@
           </p>
         </div>
         <div class="flex flex-col items-center">
-          <img src="./Group 36042.png" alt="" />
+          <img id="work" src="./Group 36042.png" alt="" />
           <div class="max-w-[271px] w-full">
             <h2 class="textrgb jost text-[60px] font-semibold leading-[95px]">
               02
@@ -934,7 +936,10 @@
       </div>
     </div>
     <!-- every thing  -->
-    <div class="flex max-w-[1140px] w-full mx-auto items-center mt-[250px]">
+    <div
+      class="flex max-w-[1140px] w-full mx-auto items-center mt-[250px]"
+      id="every-main"
+    >
       <div class="mt-[36px] max-w-[558px] w-full">
         <h2
           class="text-white text-[24px] openfont font-semibold leading-[26px]"
@@ -961,7 +966,7 @@
         </button>
       </div>
       <div>
-        <img src="./image 8.png" alt="" />
+        <img id="every" src="./image 8.png" alt="" />
       </div>
     </div>
     <!-- get in  -->
@@ -1244,6 +1249,8 @@
     ></div> -->
 
     <!-- Initialize Swiper -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./index.js"></script>
   </body>
