--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- navbar  -->
     <nav
-      class="max-w-[1371px] flex items-center w-full mx-auto h-[80px] bg-[rgba(255,255,255,0.05)] rounded-[5px] border-[0.5px] border-[rgba(255,255,255,0.32);] shadow-[-50.63837px_31.98213px_122.59817px_0px_rgba(0,0,0,0.44);] backdrop-blur-[27px] justify-around drop relative"
+      class="max-w-[1371px] flex items-center w-full mx-auto h-[80px] bg-[rgba(255,255,255,0.05)] rounded-[5px] border-[0.5px] border-[rgba(255,255,255,0.32);] shadow-[-50.63837px_31.98213px_122.59817px_0px_rgba(0,0,0,0.44);] backdrop-blur-[27px] justify-around drop top-3 z-30"
     >
       <span>
         <svg
@@ -205,9 +205,9 @@
 
     <!-- hero  -->
     <div
-      class="max-w-[1371px] w-full mx-auto relative flex xl:flex-row flex-col items-center"
+      class="max-w-[1371px] w-full mx-auto relative flex xl:flex-row flex-col-reverse items-center"
     >
-      <span class="absolute -bottom-9 -left-[4%]">
+      <span class="absolute max-md:hidden -bottom-9 -left-[4%]">
         <svg
           width="151"
           height="163"
@@ -263,7 +263,7 @@
           </defs>
         </svg>
       </span>
-      <span class="absolute left-[47%] -z-10 top-8"
+      <span class="absolute max-xl:hidden left-[47%] -z-10 top-8"
         ><svg
           width="104"
           height="103"
@@ -384,7 +384,7 @@
             </defs>
           </svg>
         </span>
-        <span class="absolute bottom-[62px] left-[30%]">
+        <span class="absolute max-md:hidden bottom-[62px] left-[30%]">
           <svg
             width="28"
             height="27"
@@ -538,7 +538,7 @@
               class="swiper-slide rounded-[34px] max-w-[364px] w-full bg-gradient-to-l p-[1px] from-[#2653FF] via-[#AF00E8] to-[#FABD23]"
             >
               <div
-                class="max-w-[364px] w-full sm:h-[264px] z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] pl-2 sm:pl-[34px] py-[24px]"
+                class="max-w-[364px] w-full sm:sm:h-[264px] z-10 rounded-[34px] backdrop-blur-[11px] bg-[#35262D] sm:pl-[34px] pl-2 py-[24px]"
               >
                 <h2
                   class="text-white openfont text-[32px] font-bold leading-[32px]"
@@ -564,7 +564,7 @@
               class="swiper-slide rounded-[34px] max-w-[364px] w-full bg-gradient-to-l p-[1px] from-[#2653FF] via-[#AF00E8] to-[#FABD23]"
             >
               <div
-                class="max-w-[364px] w-full h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] pl-[34px] py-[24px]"
+                class="max-w-[364px] w-full sm:h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] sm:pl-[34px] pl-2 py-[24px]"
               >
                 <h2
                   class="text-white openfont text-[32px] font-bold leading-[32px]"
@@ -590,7 +590,7 @@
               class="swiper-slide rounded-[34px] max-w-[364px] w-full bg-gradient-to-l p-[1px] from-[#2653FF] via-[#AF00E8] to-[#FABD23]"
             >
               <div
-                class="max-w-[364px] w-full h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] pl-[34px] py-[24px]"
+                class="max-w-[364px] w-full sm:h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] sm:pl-[34px] pl-2 py-[24px]"
               >
                 <h2
                   class="text-white openfont text-[32px] font-bold leading-[32px]"
@@ -616,7 +616,7 @@
               class="swiper-slide rounded-[34px] max-w-[364px] w-full bg-gradient-to-l p-[1px] from-[#2653FF] via-[#AF00E8] to-[#FABD23]"
             >
               <div
-                class="max-w-[364px] w-full h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] pl-[34px] py-[24px]"
+                class="max-w-[364px] w-full sm:h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] sm:pl-[34px] pl-2 py-[24px]"
               >
                 <h2
                   class="text-white openfont text-[32px] font-bold leading-[32px]"
@@ -642,7 +642,7 @@
               class="swiper-slide rounded-[34px] max-w-[364px] w-full bg-gradient-to-l p-[1px] from-[#2653FF] via-[#AF00E8] to-[#FABD23]"
             >
               <div
-                class="max-w-[364px] w-full h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] pl-[34px] py-[24px]"
+                class="max-w-[364px] w-full sm:h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] sm:pl-[34px] pl-2 py-[24px]"
               >
                 <h2
                   class="text-white openfont text-[32px] font-bold leading-[32px]"
@@ -668,7 +668,7 @@
               class="swiper-slide rounded-[34px] max-w-[364px] w-full bg-gradient-to-l p-[1px] from-[#2653FF] via-[#AF00E8] to-[#FABD23]"
             >
               <div
-                class="max-w-[364px] w-full h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] pl-[34px] py-[24px]"
+                class="max-w-[364px] w-full sm:h-[264px] z-10 rounded-[34px] backdrop-blur-sm bg-[#35262D] sm:pl-[34px] pl-2 py-[24px]"
               >
                 <h2
                   class="text-white openfont text-[32px] font-bold leading-[32px]"
@@ -860,7 +860,7 @@
         </h1>
       </div>
       <div class="flex items-center lg:flex-row flex-col relative">
-        <span class="absolute left-[20%] bottom-[20%]">
+        <span class="absolute max-lg:hidden left-[20%] bottom-[20%]">
           <svg
             width="103"
             height="69"
@@ -876,7 +876,7 @@
             />
           </svg>
         </span>
-        <span class="absolute right-[20%] bottom-[20%]"
+        <span class="absolute max-lg:hidden right-[20%] bottom-[20%]"
           ><svg
             width="103"
             height="70"
@@ -937,7 +937,7 @@
     </div>
     <!-- every thing  -->
     <div
-      class="flex max-w-[1140px] w-full mx-auto items-center mt-[250px]"
+      class="flex max-w-[1140px] w-full lg:flex-row flex-col mx-auto items-center mt-[250px]"
       id="every-main"
     >
       <div class="mt-[36px] max-w-[558px] w-full">
@@ -969,17 +969,20 @@
         <img id="every" src="./image 8.png" alt="" />
       </div>
     </div>
+    `
     <!-- get in  -->
     <div
+      id="getin-main"
       class="bg-[url('./bg.png')] bg-cover bg-no-repeat max-w-[1440px] bg-center w-full mx-auto mt-[200px]"
     >
       <div
         class="flex lg:flex-row flex-col max-w-[1440px] w-full mx-auto items-center justify-between"
       >
         <div>
-          <img src="./Group 20.png" alt="" />
+          <img id="getin" src="./Group 20.png" alt="" />
         </div>
         <div class="max-w-[526px] w-full">
+          ~
           <h1
             class="text-white openfont text-[28px] sm:text-[64px] font-extrabold leading-[80px]"
           >
