--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
+    <!-- Recommended -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -75,7 +82,7 @@
     <nav
       class="max-w-[1371px] flex items-center w-full mx-auto h-[80px] bg-[rgba(255,255,255,0.05)] rounded-[5px] border-[0.5px] border-[rgba(255,255,255,0.32);] shadow-[-50.63837px_31.98213px_122.59817px_0px_rgba(0,0,0,0.44);] backdrop-blur-[27px] justify-around drop top-3 z-30"
     >
-      <span>
+      <span id="logo">
         <svg
           width="50"
           height="19"
@@ -156,7 +163,7 @@
       <!-- sidebar  -->
       <div
         id="side"
-        class="flex flex-col gap-[34px] items-center bg-cyan-700 absolute w-full top-20 left-[-150%]"
+        class="flex flex-col gap-[34px] items-center bg-gray-300 absolute w-full top-20 left-[-150%]"
       >
         <a
           href=""
@@ -808,7 +815,7 @@
       <div
         class="max-w-[1140px] w-full mx-auto mt-[200px] gap-[32px] flex lg:flex-row flex-col items-center relative"
       >
-        <div><img src="./Group 36041.png" alt="" /></div>
+        <div><img id="our-img" src="./Group 36041.png" alt="" /></div>
         <div class="mt-[36px] w-full">
           <h2
             class="text-white text-[24px] openfont font-semibold leading-[26px]"
@@ -904,7 +911,7 @@
             quis pellentesque leo eleifend.
           </p>
         </div>
-        <div class="flex flex-col items-center">
+        <div class="flex flex-col items-center" id="our-img2">
           <img id="work" src="./Group 36042.png" alt="" />
           <div class="max-w-[271px] w-full">
             <h2 class="textrgb jost text-[60px] font-semibold leading-[95px]">
@@ -1253,8 +1260,15 @@
 
     <!-- Initialize Swiper -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/sheryjs/dist/Shery.js"
+    ></script>
+    <!-- Recommended -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/three.js/0.159.0/three.min.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
